<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Comodin2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/asignaturas" />

    <CheckBox
        android:id="@+id/ch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matematicas" />

    <CheckBox
        android:id="@+id/ch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lengua" />

    <CheckBox
        android:id="@+id/ch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fisica" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar" />
</LinearLayout>