<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Ver">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false" />

    <TextView
        android:id="@+id/viewFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verfecha" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false" />

    <TextView
        android:id="@+id/viewProfesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preguntaProfesor" />

    <EditText
        android:id="@+id/txtProfesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false" />

    <TextView
        android:id="@+id/viewAsignaturas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verAsignaturas" />

    <EditText
        android:id="@+id/txtAsignaturas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false" />

    <TextView
        android:id="@+id/viewGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verGenero" />

    <EditText
        android:id="@+id/txtGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar" />

</LinearLayout>